--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "author": "Yeonhwa A",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
-  ,"scripts": {
-    "start": "node index.js"
+    "express": "^4.16.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1"
+  },
+  "scripts": {
+    "start": "nodemon --exec ./node_modules/.bin/babel-node index.js"
+  }, 
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/register": "^7.0.0",
+    "nodemon": "^1.18.10"
   }
 }
