--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "author": "Yeonhwa A",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1"
+    "@babel/preset-env": "^7.3.1",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "morgan": "^1.9.1"
   },
   "scripts": {
-    "start": "nodemon --exec ./node_modules/.bin/babel-node index.js"
-  }, 
+    "start": "nodemon --exec ./node_modules/.bin/babel-node index.js --delay 2"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/register": "^7.0.0",
