--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "morgan": "^1.9.1"
   },
   "scripts": {
-    "start": "nodemon --exec ./node_modules/.bin/babel-node index.js --delay 2"
+    "start": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
