--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.18",
@@ -24,6 +26,9 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/register": "^7.0.0",
+    "eslint": "^5.15.2",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "nodemon": "^1.18.10"
   }
 }
