--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "dotenv": "^6.2.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   },
   "scripts": {
-    "start": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2",
+    "dev:assets": "webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
