--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
@@ -25,7 +26,8 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2",
-    "dev:assets": "webpack"
+    "dev:assets": "WEBPACK_ENV=development webpack",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
