--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.5.0",
+    "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "css-loader": "^2.1.1",
@@ -30,7 +32,7 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2",
-    "dev:assets": "webpack",
+    "dev:assets": "webpack -w",
     "build:assets": "webpack"
   },
   "devDependencies": {
