--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack": "^4.29.6"
   },
   "scripts": {
-    "dev:server": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2",
+    "dev:server": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2 --ignore 'scss'",
     "dev:assets": "webpack -w",
     "build:assets": "webpack"
   },
