--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-sass": "^4.11.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
