--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "ngrok": "^3.1.1",
     "node-sass": "^4.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
@@ -40,7 +41,8 @@
   "scripts": {
     "dev:server": "nodemon --exec ./node_modules/.bin/babel-node init.js --delay 2 --ignore 'scss'",
     "dev:assets": "webpack -w",
-    "build:assets": "webpack"
+    "build:assets": "webpack",
+    "tunnel": "lt --port 4000"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
